--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
+    "@thisbeyond/solid-dnd": "^0.7.5",
     "solid-js": "^1.9.5",
     "vinxi": "^0.5.3"
   },
