--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@corvu/drawer": "^0.2.3",
+    "@corvu/resizable": "^0.2.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "@thisbeyond/solid-dnd": "^0.7.5",
