--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@corvu/dialog": "^0.2.4",
     "@corvu/drawer": "^0.2.3",
     "@corvu/resizable": "^0.2.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "@thisbeyond/solid-dnd": "^0.7.5",
+    "big.js": "^6.2.2",
+    "lucide-solid": "^0.487.0",
     "solid-js": "^1.9.5",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.7",
+    "@types/big.js": "^6.2.2",
     "tailwindcss": "^4.0.7"
   },
   "engines": {
