--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "@thisbeyond/solid-dnd": "^0.7.5",
+    "@zag-js/solid": "^1.7.0",
+    "@zag-js/steps": "^1.7.0",
     "big.js": "^6.2.2",
     "lucide-solid": "^0.487.0",
     "solid-js": "^1.9.5",
