--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "big.js": "^6.2.2",
     "lucide-solid": "^0.487.0",
     "solid-js": "^1.9.5",
+    "swapy": "^1.0.5",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
