--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "@corvu/dialog": "^0.2.4",
     "@corvu/drawer": "^0.2.3",
     "@corvu/resizable": "^0.2.4",
+    "@fontsource/inter": "^5.2.5",
+    "@kobalte/core": "^0.13.9",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
     "@thisbeyond/solid-dnd": "^0.7.5",
     "@zag-js/solid": "^1.7.0",
     "@zag-js/steps": "^1.7.0",
     "big.js": "^6.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-solid": "^8.5.2",
     "lucide-solid": "^0.487.0",
     "solid-js": "^1.9.5",
     "swapy": "^1.0.5",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
